@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4633 2004/01/28 14:17:44 xtraeme Exp $
+$NetBSD: CHANGES,v 1.4634 2004/01/28 15:27:12 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -518,3 +518,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated quicklist to 0.8.6nb3 [xtraeme 2004-01-28]
 	Updated cooledit to 3.17.5nb1 [xtraeme 2004-01-28]
 	Updated mule to 2.3nb2 [xtraeme 2004-01-28]
+	Updated xmame to 0.78.1nb1 [xtraeme 2004-01-28]
